src/css/style.css
/* ... */
  .cf::before,
  .cf::after {
    content: '';
    display: table;
  }

  .cf::after{
    clear: both;
  }

  .send-message {
    width: 80%;
    padding: 10px 20px;
    border-radius: 10px;
    cursor: pointer;
    display: inline-flex;
    justify-content: center;
    margin-top: var(--mb-2);
    transition: all 0.5s;
  }

  .send-message:hover{
    box-shadow:
    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
    0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
    0 100px 80px rgba(0, 0, 0, 0.12);
  }

  .send-message:hover i{
    padding-left: 15px;
    transition: all 0.5s;
  }


  /************** FOOTER SECTION **************/

  .footer{
    padding-top: var(--mb-2);
    background-color: var(--footer-color);
  }

  .footer__container{
    row-gap: 3.5rem;
  }

  .footer__bg{
    background-color: var(--footer-color);
    /* padding: 2rem 0 3rem; */
  }

  .footer__title{
    font-size: var(--h1-font-size);
    margin-bottom: var(--mb-0-25);
  }

  .footer__subtitle{
    font-size: var(--small-font-size);
  }

  .footer__links{
    display: flex;
    align-items: center;
    flex-direction: column;
    row-gap: 1.5rem;
  }

  .footer__link:hover{
    color: var(--first-color-lighter);
  }

  .footer__socials{
    display: flex;
    justify-content: center;
    font-size: 1.5rem;
    margin-right: var(--mb-1-5);
    column-gap: var(--mb-1);
  }

  .footer__social-icon{
    margin: var(--mb-0-5);
    color: var(--first-color-lighter);
  }

  .footer__social:hover{
    color: var(--first-color-lighter);
  }

  .footer__copy{
    font-size: var(--smaller-font-size);
    text-align: center;
    color: var(--text-color);
    margin-top: var(--mb-3);
  }

  .footer__title,
  .footer__subtitle,
  .footer__link,
  .footer__social{
    color: #fff;
  }


  /************** SCROLL UP **************/
  .scrollup{
    position: fixed;
    right: 1rem;
    bottom: -20%;
    background-color: var(--first-color);
    opacity: 0.8;
    padding: 0 0.3rem;
    border-radius: 0.4rem;
    z-index: var(--z-tooltip);
    transition: 0.4s;
  }

  .scrollup:hover{
    background-color: var(--first-color-alt);
  }

  .scrollup__icon{
    font-size: 1.5rem;
    color: #fff;
  }

  /* show scroll button */
  .show-scroll{
    bottom: 5rem;
  }

  /************** SCROLL BAR **************/
  ::-webkit-scrollbar{
    width: 0.8rem;
    background-color: var(--scroll-bar-color);
    border-radius: 0.5rem;
  }

  ::webkit-scrollbar-thumb{
    background-color: var(--scroll-thumb-color);
    border-radius: 0.5rem;
  }

  ::-webkit-scrollbar-thumb:hover{
    background-color: var(--text-color-light);
  }

  /************** MEDIA QUERIES **************/

  /* Small Screen and anything smaller than this should go to hell like galaxy z fold */
  @media screen and (max-width: 350px) {
    .container{
        margin-left: var(--mb-0-25);
        margin-right: var(--mb-1);
    }

    .nav__menu{
        padding: 2rem 0.25rem 4rem;
    }

    .nav__list{
        column-gap: 0;
        padding-left: 0;
    }
    
    .home__container{
        gap: 0;
    }

    .home__content{
        grid-template-columns: .25fr 3fr;
    }

    .home__scroll{
        margin-top: var(--mb-0-25);
    }

    .home__scroll-mouse{
        margin-top: var(--mb-0-25);
    }

    .about{
        margin-top: 6rem;
    }

    .qualification__data{
        gap: 0.5rem;
    }

    .footer__links{
        margin-left: 0;
    }

    ul {
        padding-left: 0;
    }

    ::-webkit-scrollbar{
        width: 0.4rem;
        border-radius: 0.4rem;
    }

    ::-webkit-scrollbar-thumb{
        background-color: var(--scroll-thumb-color);
        border-radius: 0.2rem;
    }
  }

  /* Medium Screen */
  @media screen and (max-width: 568px) {
    ul {
        padding-left: 0;
    }

    #home{
        min-height: 60vh;
    }

    .home__social{
        display: none;
    }

    .home__container{
        margin-left: auto;
        gap: 0;
    }

    .home__content{
        grid-template-columns: max-content 1fr;
    }

    .home__data{
        grid-column: initial;
        transform: none;
    }

    .contact__container{
        height: 100%;
        line-height: normal;
    }

    .contact_mail{
        margin-left: auto;
    }

    .home__scroll{
        margin-top: var(--mb-0-25);
    }

    .home__scroll-mouse{
        margin-top: var(--mb-0-25);
    }

    .about{
        margin-top: 6rem;
    }

    .about__container,
    .skill__container,
    .portfolio__container,
    .contact__container,
    .footer__container{
        grid-template-columns: repeat(1, 1fr);
        padding-left: var(--mb-1);
        padding-right: var(--mb-1);
    }

    #portfolio{
        padding-bottom: 0;
    }

    #contact{
        padding-top: 0;
    }
  }

  /* between medium and large screens there are so called abominations */
  @media screen and (max-width:768px) and (min-width: 586px) {

    ul {
        padding-left: 0;
    }

    .container{
        margin: auto;
    }

    #portfolio{
        padding-bottom: 0;
    }

    #contact{
        padding-top: 0;
    }

    .contact__container{
        height: 350px;
        line-height: 350px;
    }

    .contact_mail{
        margin-left: auto;
    }

  }
/* ... */

